--- a/public/landing.html
+++ b/public/landing.html
@@ -50,18 +50,18 @@
         </script>
     </head>
     <body>
-        <a class="github-fork-ribbon" href="http://url.to-your.repo" title="Fork me on GitHub">Fork me on GitHub</a>
+        <a class="github-fork-ribbon" href="https://github.com/garakh/mailwork" target="_blank" title="Fork me on GitHub">Fork me on GitHub</a>
         <header class="header">
             <div class="container-lrg top">
                 <div class="col-12 spread">
                     <div>
                         <a class="logo" href="/">
-                            <img src="/landing/img/logo2.png" style=""/>
+                            <img src="/landing/img/logo2.png"/>
                             <div style="">Mailwork</div>
                         </a>
                     </div>
                     <div>
-                        <a class="nav-link" href="https://passwork.me">
+                        <a class="nav-link" href="https://passwork.me" target="_blank">
                             Created by Passwork Team
                         </a>
                     </div>
@@ -131,7 +131,7 @@
                         Open Source
                     </h3>
                     <p class="paragraph">
-                        <a href="http://github/">Fork the project on GitHub</a> and implement any features you need.&nbsp;
+                        <a href="https://github.com/garakh/mailwork" target="_blank">Fork the project on GitHub</a> and implement any features you need.&nbsp;
                     </p>
                 </div>
                 <div class="col-4 border-left">
@@ -148,10 +148,10 @@
             <div class="container-sml">
                 <div class="col-12 text-center">
                     <div class="pull-left">
-                        <a class="nav-link" href="https://passwork.me/">
+                        <a class="nav-link" href="https://passwork.me/" target="_blank">
                             About us
                         </a>
-                        <a class="nav-link" href="https://passwork.me/info/about/">
+                        <a class="nav-link" href="https://github.com/garakh/mailwork" target="_blank">
                             GitHub
                         </a>
                         <a class="nav-link"  href="https://chrome.google.com/webstore/detail/mailwork/cmhpbfnjlkipfhbhhdlmedmmfcmeodfb" target="_blank">
