--- a/public/landing.html
+++ b/public/landing.html
@@ -109,7 +109,7 @@
                     Download and install free chrome extension
                 </h1>
                 <h4>
-                    or set up <a href="#">your own backend</a>
+                    or set up <a href="https://github.com/garakh/mailwork" target="_blank">your own backend</a>
                 </h4>
                 <div class="ctas">
                     <a class="ctas-button-2" href="https://chrome.google.com/webstore/detail/mailwork/cmhpbfnjlkipfhbhhdlmedmmfcmeodfb" target="_blank">
