Meta tags, CSS fix, youtube video

--- a/public/landing.html
+++ b/public/landing.html
@@ -1,7 +1,7 @@
 ﻿<html>
     <head>
         <title>
-            IMAP mailbox integration. Sell better with instant access to e-mail history from any web page
+            IMAP mailbox integration for effective email marketing
         </title>
         <meta charSet="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +11,7 @@
         <![endif]-->	
         <link rel="stylesheet" type="text/css" href="/landing/css/main.css">
         <link rel="stylesheet" type="text/css" href="/landing/css/devices.css">
+        <link rel="stylesheet" type="text/css" href="/landing/libs/youtube/styles.css">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/landing/favicon/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/landing/favicon/apple-icon-72x72.png">
@@ -29,8 +30,44 @@
         <meta name="msapplication-TileImage" content="/landing/favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">	
         <meta name="description" content="Power up Trello, Jira, CRM/CMS and any web site or service with IMAP mailbox integration. Click any e-mail and instantly get the correspondence history in your browser.">
-        <meta name="keywords" content="IMAP, mailbox, email, Mailwork">
-        <meta name="title" content="IMAP mailbox integration. Sell better with instant access to e-mail history from any web page">        
+        <meta name="keywords" content="IMAP, mailbox, email, Mailwork, CRM, CMS, Trello, Pipedrive">
+        <meta name="title" content="IMAP mailbox integration. Sell better with instant access to e-mail history from any web page">  
+
+        
+        <!-- Google Plus -->
+        <meta itemprop="name" content="IMAP mailbox integration for effective email marketing">
+        <meta itemprop="description" content="Power up Trello, Jira, CRM/CMS and any web site or service with IMAP mailbox integration. Click any e-mail and instantly get the correspondence history in your browser">
+        <meta itemprop="image" content="<?= $img ?>">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:url" content="https://mailwork.me">
+        <meta name="twitter:site" content="@beentech">
+        <meta name="twitter:title" content="IMAP mailbox integration for effective email marketing">
+        <meta name="twitter:description" content="Power up Trello, Jira, CRM/CMS and any web site or service with IMAP mailbox integration. Click any e-mail and instantly get the correspondence history in your browser">
+        <meta name="twitter:creator" content="@beentech">
+        <meta name="twitter:image:src" content="https://mailwork.me/landing/img/popup.png">
+        <meta name="twitter:player" content="https://mailwork.me/landing/img/popup.png">
+        <!-- Open Graph General (Facebook & Pinterest) -->
+        <meta property="og:url" content="https://mailwork.me">
+        <meta property="og:title" content="IMAP mailbox integration for effective email marketing">
+        <meta property="og:description" content="Power up Trello, Jira, CRM/CMS and any web site or service with IMAP mailbox integration. Click any e-mail and instantly get the correspondence history in your browser">
+        <meta property="og:site_name" content="Mailwork">
+        <meta property="og:image" content="https://mailwork.me/landing/img/popup.png">
+        <meta property="fb:admins" content="">
+        <meta property="fb:app_id" content="">
+        <meta property="og:type" content="Article">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:audio" content="">
+        <meta property="og:video" content="">
+        <!-- Open Graph Article (Facebook & Pinterest) -->
+        <meta property="article:author" content="igarakh">
+        <meta property="article:section" content="">
+        <meta property="article:tag" content="IMAP, mailbox, email, Mailwork, CRM, CMS, Trello, Pipedrive">
+        <meta property="article:published_time" content="">
+        <meta property="article:modified_time" content="">
+        <meta property="article:expiration_time" content="">           
+
+
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -76,18 +113,18 @@
                         Power up Trello, Jira, CRM/CMS and any web site or service with IMAP mailbox integration. Click any e-mail and instantly get the correspondence history in your browser.
                     </h2>
                     <div class="ctas">
-                        <a class="ctas-button" href="https://chrome.google.com/webstore/detail/mailwork/cmhpbfnjlkipfhbhhdlmedmmfcmeodfb" target="_blank">
-                            Install on Chrome
+                        <a class="ctas-button youtube" href="#">
+                            See how it works
                         </a>
                     </div>
                     <div class="ctas-free">
-                        FOR FREE!
+                        Free and Open Source
                     </div>
                 </div>
             </div>
             <div class="container-lrg">
                 <div class="centerdevices col-12">
-                    <div class="browserwrapper">
+                    <div class="browserwrapper youtube">
                         <div class="browser">
                             <div class="mask">                      
                                 <img class="mask-img active" src="/landing/img/bg/bg1.png" id="mask-img1">
@@ -97,6 +134,7 @@
                                 <img class="mask-img" src="/landing/img/bg/bg5.png" id="mask-img5">
                                 <img class="mask-img" src="/landing/img/bg/bg6.png" id="mask-img6">
                                 <img class="popup-img" src="/landing/img/popup.png">
+                                <img class="popup-play" src="/landing/img/play.png">
                             </div>
                         </div>
                     </div>
@@ -144,6 +182,19 @@
                 </div>
             </div>
         </div>
+        <div class="feature3 whiteback">
+            <div class="col-12 text-center download-section">
+                <h1>
+                    Do you like Mailwork?
+                </h1>
+                <h4>
+                    Please do us  a favor and tell your friends about Mailwork
+                </h4>
+                <div class="ctas">
+                    <div class="sharethis-inline-share-buttons"></div>
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <div class="container-sml">
                 <div class="col-12 text-center">
@@ -168,5 +219,7 @@
         </div>
         <script type="text/javascript" src="/landing/jquery.min.js"></script>
         <script type="text/javascript" src="/landing/scripts.js"></script>
+        <script type="text/javascript" src="/landing/libs/youtube/script.js"></script>
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5957b017be31800011351ddd&product=inline-share-buttons"></script>        
     </body>
 </html>
